# peaceofcake

./: .gitignore  .gitmodules  MANIFEST.in  README.md  article.md  pyproject.toml
DFINEDemo/: project.yml
DFINEDemo/DFINEDemo/: COCOLabels.swift  CameraManager.swift  CameraPreviewView.swift  CameraView.swift  ContentView.swift  DFINEDemoApp.swift  DetectionOverlayView.swift  ModelPickerView.swift  ObjectDetector.swift  VideoProcessor.swift  VideoView.swift
DFINEDemo/DFINEDemo.xcodeproj/: project.pbxproj
DFINEDemo/DFINEDemo.xcodeproj/project.xcworkspace/xcuserdata/majimadaisuke.xcuserdatad/: UserInterfaceState.xcuserstate
DFINEDemo/DFINEDemo.xcodeproj/xcuserdata/majimadaisuke.xcuserdatad/xcschemes/: xcschememanagement.plist
DFINEDemo/tools/: export_coreml.py
peaceofcake/: __init__.py  cli.py
peaceofcake/cfg/: defaults.py
peaceofcake/cfg/datasets/: coco.yaml  yolo_example.yaml
peaceofcake/engine/: coreml_patches.py  exporter.py  model.py  predictor.py  rfdetr_exporter.py  rfdetr_predictor.py  rfdetr_trainer.py  rfdetr_validator.py  trainer.py  validator.py
peaceofcake/models/: dfine.py  rfdetr.py
peaceofcake/results/: detection.py
peaceofcake/utils/: converters.py  downloads.py  plotting.py
