[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peaceofcake"
version = "0.1.0"
description = "Simple vision model training and deployment. Apache 2.0."
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow",
    "PyYAML",
    "numpy",
    "faster-coco-eval",
    "scipy",
]

[project.scripts]
poc = "peaceofcake.cli:main"
peaceofcake = "peaceofcake.cli:main"

[project.optional-dependencies]
export = ["onnx", "onnxsim", "coremltools>=7.0"]

[tool.setuptools.packages.find]
include = ["peaceofcake*"]

[tool.setuptools.package-data]
peaceofcake = ["../third_party/dfine/configs/**/*.yml"]
