[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peaceofcake"
version = "0.2.0"
description = "Simple vision model training and deployment. Apache 2.0."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["object-detection", "deep-learning", "dfine", "detr", "coreml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "Pillow",
    "PyYAML",
    "numpy",
    "faster-coco-eval",
    "scipy",
    "rfdetr>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/majimadaisuke/peaceofcake"
Repository = "https://github.com/majimadaisuke/peaceofcake"

[project.scripts]
poc = "peaceofcake.cli:main"
peaceofcake = "peaceofcake.cli:main"

[project.optional-dependencies]
export = ["onnx", "onnxsim", "coremltools>=7.0"]
rfdetr-train = ["rfdetr[train]>=1.6.0"]

[tool.setuptools.packages.find]
include = ["peaceofcake*"]

[tool.setuptools.package-data]
"peaceofcake" = [
    "third_party/dfine/configs/**/*.yml",
]
